samples/_failures_safe/1761213632_d593ae_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4855bf3a.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_4855bf3a.c:124: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_4855bf3a.c:123:9: error: expected declaration or statement at end of input
  123 |         if
      |         ^~
./samples/SAFE/__tmp_4855bf3a.c:123:9: error: expected declaration or statement at end of input
